--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <link rel="icon" href="/bahad13icon.svg">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>מילוי מסמכי דגימת שתן</title>
+    <title>מילוי מסמך דגימת שתן</title>
   </head>
   <body>
     <div id="app"></div>
